projects/demo-igniters/force-app/main/default/objects/Resource_Forecast__c/Resource_Forecast__c.object-meta.xml
<CustomObject>
    <description>Tracks resource forecasting and cost estimation for opportunities before deal closure. Used by sales reps and RevOps to project human resource requirements.</description>
    <label>Resource Forecast</label>
    <nameField>
        <displayFormat>RF-{00000}</displayFormat>
        <label>Resource Forecast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Forecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>