projects/demo-igniters/force-app/main/default/objects/Resource_Forecast__c/fields/Expected_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expected_Hours__c</fullName>
    <description>The estimated number of hours required for this resource</description>
    <inlineHelpText>Enter the total expected hours for this resource allocation</inlineHelpText>
    <label>Expected Hours</label>
    <precision>8</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>