projects/demo-igniters/force-app/main/default/objects/Resource_Forecast__c/fields/Hourly_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Cost__c</fullName>
    <description>The hourly cost rate for this resource role</description>
    <inlineHelpText>Enter the hourly cost for this resource type</inlineHelpText>
    <label>Hourly Cost</label>
    <precision>10</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>