projects/demo-igniters/force-app/main/default/objects/Resource_Forecast__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>The role or type of resource needed for this opportunity</description>
    <inlineHelpText>Select the role type for this resource allocation</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>Technical Lead</fullName>
            </value>
            <value>
                <fullName>Delivery Consultant</fullName>
            </value>
            <value>
                <fullName>Solution Architect</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>QA Engineer</fullName>
            </value>
            <value>
                <fullName>Data Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>