projects/demo-igniters/force-app/main/default/objects/Resource_Forecast__c/fields/Total_Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Cost__c</fullName>
    <description>Calculated total cost: Expected Hours multiplied by Hourly Cost</description>
    <formula>Expected_Hours__c * Hourly_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated: Expected Hours × Hourly Cost</inlineHelpText>
    <label>Total Estimated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>